<resources>
    <string name="app_name">BPT</string>

    <string name="entry_card_title">Energy Entry</string>
    <string name="entry_card_instructions">Input your energy, focus and motivation for right now.</string>
    <string name="entry_card_cta">Enter Data</string>

    <string name="motivation">Motivation</string>
    <string name="focus">Focus</string>
    <string name="energy">Energy</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>

    <string name="entry_form_number_error">Please enter a number from 1 to 10</string>
    <string name="statistics_no_entries">No entries for today!</string>

    <string name="what_is">What is…?</string>
    <string name="how_to">How to…?</string>
    <string name="articles">Articles</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="title_network">Network</string>

    <string name="error_web_view">Sorry, an error has occurred while loading this web page. Please try again later.</string>

    <string name="generic_salutation">Hello!</string>
    <string name="specific_salutation">Hello, %1$s!</string>
    <string name="most_productive_day">Your most productive day is:</string>
    <string name="most_productive_hour">Your most productive time of day is:</string>
    <string name="least_productive_day">Your least productive day is:</string>
    <string name="least_productive_hour">You least productive time of day is:</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="hours_tracking">Hours Tracking</string>
    <string name="log_out">Log Out</string>
</resources>
