<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/card_elevation">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_margin">

            <TextView
                android:id="@+id/name_label"
                style="@style/SettingsCard.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/name_value"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin"
                tools:text="Alan Hill"
                app:layout_constraintTop_toBottomOf="@id/name_label"
                app:layout_constraintBottom_toTopOf="@id/email_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/email_label"
                style="@style/SettingsCard.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintTop_toBottomOf="@id/name_value"
                app:layout_constraintBottom_toTopOf="@id/email_value"
                app:layout_constraintStart_toStartOf="parent"/>
            
            <TextView
                android:id="@+id/email_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin"
                tools:text="test@gmail.com"
                app:layout_constraintTop_toBottomOf="@id/email_label"
                app:layout_constraintBottom_toTopOf="@id/hours_tracking_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/hours_tracking_label"
                style="@style/SettingsCard.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_tracking"
                app:layout_constraintTop_toBottomOf="@id/email_value"
                app:layout_constraintBottom_toTopOf="@id/hours_tracking_value"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/hours_tracking_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/double_standard_margin"
                tools:text="8am - 5pm"
                app:layout_constraintTop_toBottomOf="@id/hours_tracking_label"
                app:layout_constraintBottom_toTopOf="@id/log_out"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/log_out"
                style="@style/CTA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="@dimen/standard_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>